mruby-sys/src/ffi.rs

extern "C" {
    /// Create an `mrb_value` representing `nil`
    #[link_name = "\u{1}_mrb_sys_nil_value"]
    pub fn mrb_sys_nil_value() -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` representing `false`
    #[link_name = "\u{1}_mrb_sys_false_value"]
    pub fn mrb_sys_false_value() -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` representing `true`
    #[link_name = "\u{1}_mrb_sys_true_value"]
    pub fn mrb_sys_true_value() -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` representing an integer (a `Fixnum`)
    #[link_name = "\u{1}_mrb_sys_fixnum_value"]
    pub fn mrb_sys_fixnum_value(value: mrb_int) -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` representing a float
    #[link_name = "\u{1}_mrb_sys_float_value"]
    pub fn mrb_sys_float_value(mrb: *mut mrb_state, value: mrb_float) -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` from an `RProc`
    #[link_name = "\u{1}_mrb_sys_proc_value"]
    pub fn mrb_sys_proc_value(mrb: *mut mrb_state, proc_: *mut RProc) -> mrb_value;
}
extern "C" {
    /// Create a `Class` `mrb_value` from an `RClass`
    #[link_name = "\u{1}_mrb_sys_class_value"]
    pub fn mrb_sys_class_value(klass: *mut RClass) -> mrb_value;
}
extern "C" {
    /// Create a `Module` `mrb_value` from an `RClass`
    #[link_name = "\u{1}_mrb_sys_module_value"]
    pub fn mrb_sys_module_value(module: *mut RClass) -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` from an `RData`
    #[link_name = "\u{1}_mrb_sys_data_value"]
    pub fn mrb_sys_data_value(data: *mut RData) -> mrb_value;
}
extern "C" {
    /// Create an `mrb_value` from a `void *`
    #[link_name = "\u{1}_mrb_sys_obj_value"]
    pub fn mrb_sys_obj_value(p: *mut ::std::os::raw::c_void) -> mrb_value;
}
extern "C" {
    /// Set instance type tag
    #[link_name = "\u{1}_mrb_sys_set_instance_tt"]
    pub fn mrb_sys_set_instance_tt(class: *mut RClass, type_: mrb_vtype);
}
extern "C" {
    /// Get a C string with the name of the symbol identified by an `mrb_value`
    #[link_name = "\u{1}_mrb_sys_symbol_name"]
    pub fn mrb_sys_symbol_name(
        mrb: *mut mrb_state,
        value: mrb_value,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    /// Create a new symbol from a C string
    #[link_name = "\u{1}_mrb_sys_new_symbol"]
    pub fn mrb_sys_new_symbol(
        mrb: *mut mrb_state,
        string: *const ::std::os::raw::c_char,
        len: usize,
    ) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_sys_data_init"]
    pub fn mrb_sys_data_init(
        value: *mut mrb_value,
        ptr: *mut ::std::os::raw::c_void,
        type_: *const mrb_data_type,
    );
}
extern "C" {
    /// Raise the most recent thrown exception on `mrb_state`
    #[link_name = "\u{1}_mrb_sys_raise_current_exception"]
    pub fn mrb_sys_raise_current_exception(mrb: *mut mrb_state);
}
extern "C" {
    /// Generate a String `mrb_value` from a value suitable for debug logging
    #[link_name = "\u{1}_mrb_sys_value_debug_str"]
    pub fn mrb_sys_value_debug_str(mrb: *mut mrb_state, value: mrb_value) -> mrb_value;
}
extern "C" {
    /// Raise an exception class with a message
    #[link_name = "\u{1}_mrb_sys_raise"]
    pub fn mrb_sys_raise(
        mrb: *mut mrb_state,
        eclass: *const ::std::os::raw::c_char,
        msg: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    /// Check if a class is defined under another class or module
    #[link_name = "\u{1}_mrb_sys_class_defined_under"]
    pub fn mrb_sys_class_defined_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> mrb_bool;
}
extern "C" {
    /// Get the `RClass` representing the `Class` of an `mrb_value`
    #[link_name = "\u{1}_mrb_sys_class_of_value"]
    pub fn mrb_sys_class_of_value(mrb: *mut mrb_state, value: mrb_value) -> *mut RClass;
}
extern "C" {
    /// Get length of an `Array`
    #[link_name = "\u{1}_mrb_sys_ary_len"]
    pub fn mrb_sys_ary_len(value: mrb_value) -> mrb_int;
}
extern "C" {
    /// Set save point for garbage collection arena to recycle `mrb_value` objects
    /// created with C function calls. Returns an index in the arena stack to restore
    /// to when calling `mrb_sys_gc_arena_restore`.
    #[link_name = "\u{1}_mrb_sys_gc_arena_save"]
    pub fn mrb_sys_gc_arena_save(mrb: *mut mrb_state) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Restore save point for garbage collection arena to recycle `mrb_value`
    /// objects created with C function calls.
    #[link_name = "\u{1}_mrb_sys_gc_arena_restore"]
    pub fn mrb_sys_gc_arena_restore(mrb: *mut mrb_state, arena_index: ::std::os::raw::c_int);
}
extern "C" {
    /// Get an `RBasic` pointer to an mruby object.
    #[link_name = "\u{1}_mrb_sys_basic_ptr"]
    pub fn mrb_sys_basic_ptr(value: mrb_value) -> *mut RBasic;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct iv_tbl {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct alloca_header {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct symbol_name {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_irep_debug_info {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct htable {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_shared_string {
    pub _address: u8,
}
